--- a/aaas-api-user-info/docker-compose.yml
+++ b/aaas-api-user-info/docker-compose.yml
@@ -2,13 +2,13 @@ version: "2"
 
 
 services:
-  aaas-api-finance:
-    image: aaas-api-finance:latest
+  aaas-api-user-info:
+    image: aaas-api-user-info:latest
     labels:
-      - "aaas-api-finance"
+      - "aaas-api-user-info"
     ports:
-      - "10120:10120"
-      - "10121:10121"
+      - "10060:10060"
+      - "10061:10061"
     environment:
       - SPRING_PROFILES_ACTIVE=k8s
       - _JAVA_OPTIONS=-Xmx256m
