--- a/aaas-mid-api/src/main/resources/application-k8s.yml
+++ b/aaas-mid-api/src/main/resources/application-k8s.yml
@@ -4,9 +4,12 @@ server:
 grpc:
 #  host: localhost
   port: 10131
+  oeminfo:
+    host: localhost
+    port: 10161
   order:
-      host: localhost
-      port: 10101
+    host: localhost
+    port: 10101
 logging:
   level:
     org.hibernate.SQL: DEBUG
