fix  pom.xml resource  change  deploy

--- a/aaas-mid-api/docker-compose.yml
+++ b/aaas-mid-api/docker-compose.yml
@@ -3,7 +3,7 @@ version: "2"
 
 services:
   aaas-mid-api:
-    image: aaas-mid-api:1.0.0-SNAPSHOT
+    image: aaas-mid-api:latest
     labels:
       - "aaas-mid-api"
     ports:
