updata oeminfo k8s.yml

--- a/aaas-app-tools/aaas-app-oeminfo/src/main/resources/application-k8s.yml
+++ b/aaas-app-tools/aaas-app-oeminfo/src/main/resources/application-k8s.yml
@@ -59,6 +59,7 @@ datasource:
       dialect: org.hibernate.dialect.MySQLDialect
   
 grpc:
+  port: 10161
   userinfo:
 #    host: localhost
     port: 10061
