--- a/aaas-finance-trade/aaas-finance-trade-pay/pom.xml
+++ b/aaas-finance-trade/aaas-finance-trade-pay/pom.xml
@@ -208,6 +208,22 @@
 			</extension>
 		</extensions>
 		<plugins>
+                           <plugin>
+                           <groupId>io.fabric8</groupId>
+                           <artifactId>fabric8-maven-plugin</artifactId>
+                           <version>3.5.28</version>
+                           <configuration>
+                                 <composeFile>docker-compose.yml</composeFile>
+                           </configuration>
+                           <executions>
+                                 <execution>
+                                        <goals>
+                                        <goal>resource</goal>
+                                         <goal> build </goal> 
+                                  </goals>
+                                 </execution>
+                           </executions>
+                    </plugin>
 			<plugin>
 				<artifactId>maven-resources-plugin</artifactId>
 				<version>3.0.2</version>
@@ -268,43 +284,6 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
-			<plugin>
-				<groupId>io.fabric8</groupId>
-				<artifactId>fabric8-maven-plugin</artifactId>
-				<version>3.5.33</version>
-				<configuration>
-					<resources>
-						<labels>
-							<all>
-								<property>
-									<name>app</name>
-									<value>${artifactId}-${version}</value>
-								</property>
-								<property>
-									<name>hystrix.enabled</name>
-									<value>false</value>
-								</property>
-							</all>
-						</labels>
-					</resources>
-					<enricher>
-						<config>
-							<spring-boot-health-check>
-								<port>4444</port>
-							</spring-boot-health-check>
-						</config>
-					</enricher>
-				</configuration>
-				<executions>
-					<execution>
-						<id>fmp</id>
-						<phase>deploy</phase>
-						<goals>
-							<goal>deploy</goal>
-						</goals>
-					</execution>
-				</executions>
 			</plugin>
 		</plugins>
 	</build>
