--- a/aaas-finance-trade/aaas-finance-trade-order/docker-compose.yml
+++ b/aaas-finance-trade/aaas-finance-trade-order/docker-compose.yml
@@ -3,15 +3,13 @@ version: "2"
 
 services:
   aaas-finance-trade-order:
-    image: aaas-finance-trade-order:1.0.0 
+    image: aaas-finance-trade-order:latest 
     labels:
-      - "account-rest-service"
+      - "aaas-finance-trade-order"
     ports:
       - "10100:10100"
       - "10101:10101"
     environment:
       - SPRING_PROFILES_ACTIVE=k8s
-      - AVA_OPTIONS=-Xmx256m
-      
-      
+      - _JAVA_OPTIONS=-Xmx256m
       
