--- a/aaas-finance-trade/aaas-finance-trade-order/src/main/resources/application-k8s.yml
+++ b/aaas-finance-trade/aaas-finance-trade-order/src/main/resources/application-k8s.yml
@@ -13,7 +13,7 @@ spring:
         acknowledge-mode: auto
     username: ssf
     password: shellshellfish
-    host: external-rabbitmq-service
+    host: external-rabbitmq-servic
     port: 5672
     virtual-host: aaas
     topicQueuePayName: com-ssf-topic-queue-pay
@@ -43,7 +43,7 @@ datasource:
   aaasapp:
     url: jdbc:mysql://external-mysql-service:3306/ssftrdorder?useUnicode=true&connectionCollation=utf8_general_ci&characterSetResults=utf8&characterEncoding=utf-8
     username: sa
-    password: 1rIQ9wi!@g3P$Qh* 
+    password: N4eTVr89lX9BaPcx 
     driverClassName: com.mysql.jdbc.Driver
     defaultSchema: ssftrdorder
     maxPoolSize: 20
