fix  pom.xml resource  change  deploy

--- a/aaas-finance-trade/aaas-finance-trade-pay/docker-compose.yml
+++ b/aaas-finance-trade/aaas-finance-trade-pay/docker-compose.yml
@@ -2,13 +2,13 @@ version: "2"
 
 
 services:
-  aaas-finance-trade-order:
-    image: aaas-finance-trade-order:latest
+  aaas-finance-trade-pay:
+    image: aaas-finance-trade-pay:latest
     labels:
-      - "aaas-finance-trade-order"
+      - "aaas-finance-trade-pay"
     ports:
-      - "10100:10100"
-      - "10101:10101"
+      - "10110:10110"
+      - "10111:10111"
     environment:
       - SPRING_PROFILES_ACTIVE=k8s
       - _JAVA_OPTIONS=-Xmx256m
