updata user-info k8s.yml

--- a/aaas-api-user-info/src/main/resources/application-k8s.yml
+++ b/aaas-api-user-info/src/main/resources/application-k8s.yml
@@ -38,10 +38,11 @@ spring:
     host: redis-service
     port: 6379
     password: redis123
+    timeout: 1800000ms
     lettuce:
       pool:
         max-active: 8
-        max-wait: -1ms
+        max-wait: 1800000ms
         max-idle: 8
         min-idle: 0
 datasource:
