--- a/aaas-app-tools/aaas-app-oeminfo/src/main/resources/application-k8s.yml
+++ b/aaas-app-tools/aaas-app-oeminfo/src/main/resources/application-k8s.yml
@@ -36,7 +36,7 @@ spring:
     topicOrder: shellshellfish.order
     topicUserinfo: shellshellfish.userinfo
   redis:
-    host: redis-service
+    host: external-redis-service
     port: 6379
     password: redis123
 datasource:
