--- a/aaas-api-user-info/src/main/resources/application-k8s.yml
+++ b/aaas-api-user-info/src/main/resources/application-k8s.yml
@@ -35,7 +35,7 @@ spring:
     topicOrder: shellshellfish.order
     topicUserinfo: shellshellfish.userinfo
   redis:
-    host: redis-service
+    host: external-redis-service
     port: 6379
     password: redis123
     timeout: 1800000ms
