--- a/aaas-finance-trade/aaas-finance-trade-pay/src/main/resources/application-k8s.yml
+++ b/aaas-finance-trade/aaas-finance-trade-pay/src/main/resources/application-k8s.yml
@@ -32,7 +32,7 @@ spring:
       database: zhongzheng
       paydatabase: ssftrdpay
   redis:
-    host: redis-service
+    host: external-redis-service
     port: 6379
     password: redis123
 
