--- a/aaas-app-tools/aaas-app-oeminfo/src/main/resources/application-k8s.yml
+++ b/aaas-app-tools/aaas-app-oeminfo/src/main/resources/application-k8s.yml
@@ -1,12 +1,13 @@
 ---
 server:
   port: 10160
-  contextPath: /
 logging:
   level:
     org.hibernate.SQL: info
     org.hibernate.type.descriptor.sql.BasicBinder: info
     org.springframework.data: info
+
+---
 
 spring:
   jpa:
@@ -39,6 +40,9 @@ spring:
     host: external-redis-service
     port: 6379
     password: redis123
+    timeout: 500ms
+    pool:
+
 datasource:
   aaasapp:
     url: jdbc:mysql://external-mysql-service:3306/ssfuser?useUnicode=true&connectionCollation=utf8_general_ci&characterSet=utf8&characterEncoding=utf-8
@@ -60,22 +64,12 @@ datasource:
   
 grpc:
   port: 10161
-  userinfo:
-    host: aaas-api-user-info
-    port: 10061
-  data-manager-rpc:
-    host: aaas-api-data-manager
-    port: 10031
-  finance-trade-order-rpc:
-    host: aaas-finance-trade-order
-    port: 10101
-  finance-trade-pay-rpc:
-    host: aaas-finance-trade-pay
-    port: 10111
-  datacollection-server-rpc:
-    host: aaas-app-datacollection-server
-    port: 10091
 
+
+management:
+  endpoints:
+    web:
+      base-path: /
 
 aaas-api-finance-url: http://aaas-api-finance:10120
 
@@ -86,7 +80,40 @@ daily-finance-calculate-thread: 8
 
 
 
-management:
-  endpoints:
-    web:
-      base-path: /
+
+
+#oeminfo
+oem-info:
+  oemInfos:
+   - oem_id: 1
+     oem_name: 贝贝鱼
+     bank_phone: 021-80270119
+     oem_version: V.1.0
+     prod_name: 贝贝鱼智投
+     home_page_img_one: http://47.96.164.161:81/1.png
+     home_page_img_two: http://47.96.164.161:81/2.png
+     home_page_img_three: http://47.96.164.161:81/3.png
+     home_page_img_four: http://47.96.164.161:81/4.png
+     combination_one: http://47.96.164.161:81/APP-invest-banner01.png
+     combination_two: http://47.96.164.161:81/APP-invest-banner02.png
+     combination_three: http://47.96.164.161:81/APP-invest-banner03.png
+     combination_four: http://47.96.164.161:81/APP-invest-banner04.png
+     combination_five: http://47.96.164.161:81/APP-invest-banner05.png
+     me_head_img: http://47.96.164.161:81/icon_me_headphoto2.png
+     about_logo: http://47.96.164.161:81/icon_about_logo2.png
+   - oem_id: 2
+     oem_name: 百合
+     bank_phone: 400-88-96799
+     oem_version: V.1.0
+     prod_name: 百合智投
+     home_page_img_one: http://47.96.164.161/1.png
+     home_page_img_two: http://47.96.164.161/2.png
+     home_page_img_three: http://47.96.164.161/3.png
+     home_page_img_four: http://47.96.164.161/4.png
+     combination_one: http://47.96.164.161/APP-invest-banner01.png
+     combination_two: http://47.96.164.161/APP-invest-banner02.png
+     combination_three: http://47.96.164.161/APP-invest-banner03.png
+     combination_four: http://47.96.164.161/APP-invest-banner04.png
+     combination_five: http://47.96.164.161/APP-invest-banner05.png
+     me_head_img: http://47.96.164.161/icon_me_headphoto.png
+     about_logo: http://47.96.164.161/icon_about_logo.png
