first commit in branch

--- a/aaas-finance-trade/aaas-finance-trade-pay/pom.xml
+++ b/aaas-finance-trade/aaas-finance-trade-pay/pom.xml
@@ -239,6 +239,10 @@
 									<filtering>true</filtering>
 								</resource>
 								<resource>
+									<directory>../../proto/datacollection/</directory>
+									<filtering>true</filtering>
+								</resource>
+								<resource>
 									<directory>../../proto/common/</directory>
 									<filtering>true</filtering>
 								</resource>
