--- a/aaas-finance-trade/aaas-finance-trade-pay/src/main/resources/application-pretest.yml
+++ b/aaas-finance-trade/aaas-finance-trade-pay/src/main/resources/application-pretest.yml
@@ -71,6 +71,9 @@ grpc:
   order_client:
     host: localhost
     port: 10101
+  date_collection_client:
+    host: localhost
+    port: 10091
 using:
   spring:
     schedulerFactory: true
