--- a/aaas-api-user-login/src/main/resources/application-k8s.yml
+++ b/aaas-api-user-login/src/main/resources/application-k8s.yml
@@ -29,7 +29,7 @@ ali:
 app:
     debug: true
 redis:
-    host: external-redis-service
+    host: redis-service
     port: 6379
     pwd: redis123
 sms:
