--- a/aaas-api-user-info/src/main/resources/application-dev.yml
+++ b/aaas-api-user-info/src/main/resources/application-dev.yml
@@ -96,3 +96,20 @@ management:
   endpoints:
     web:
       base-path: /
+org:
+  quartz:
+    jobStore:
+        class: org.quartz.simpl.RAMJobStore
+        misfireThreshold: 60000
+    threadPool:
+        class: org.quartz.simpl.SimpleThreadPool
+        threadCount: 2
+        threadsInheritContextClassLoaderOfInitializingThread: true
+using:
+  spring:
+    schedulerFactory: true
+cron:
+  frequency:
+    #Seconds	Minutes	Hours	Day Of Month	Month	Day Of Week	Year
+    # 	At minute 30 past every hour.
+    jobCheckPendingRecords: 27 * * * *
