--- a/aaas-api-user-info/src/main/resources/application-prod.yml
+++ b/aaas-api-user-info/src/main/resources/application-prod.yml
@@ -92,3 +92,9 @@ management:
   endpoints:
     web:
       base-path: /
+
+cron:
+  frequency:
+    #Seconds	Minutes	Hours	Day Of Month	Month	Day Of Week	Year
+    # 	At minute 30 past every hour.
+    jobCheckPendingRecords: 30 */1 * * *
