--- a/aaas-app-tools/aaas-app-checkfunds/src/main/resources/application-dev.yml
+++ b/aaas-app-tools/aaas-app-checkfunds/src/main/resources/application-dev.yml
@@ -56,7 +56,9 @@ org:
         class: org.quartz.simpl.SimpleThreadPool
         threadCount: 2
         threadsInheritContextClassLoaderOfInitializingThread: true
-
+using:
+  spring:
+    schedulerFactory: true
 cron:
   frequency:
     #Seconds	Minutes	Hours	Day Of Month	Month	Day Of Week	Year
