--- a/aaas-app-tools/aaas-app-checkfunds/src/main/resources/application-k8s.yml
+++ b/aaas-app-tools/aaas-app-checkfunds/src/main/resources/application-k8s.yml
@@ -47,3 +47,12 @@ datasource:
       dialect: org.hibernate.dialect.MySQLDialect
 shellshellfish:
   asset-alloction-url: "http://localhost:10020"
+
+cron:
+  frequency:
+    #Seconds	Minutes	Hours	Day Of Month	Month	Day Of Week	Year
+    # 	Every 3 hours
+    jobCheckFunds: 0 0 0/3 1/1 * ? *
+using:
+  spring:
+    schedulerFactory: true
