--- a/aaas-app-tools/aaas-app-checkfunds/src/main/resources/application-testdata.yml
+++ b/aaas-app-tools/aaas-app-checkfunds/src/main/resources/application-testdata.yml
@@ -70,3 +70,11 @@ grpc:
     ip: localhost
 #    ip: 192.168.1.65
     port: 20161
+cron:
+  frequency:
+    #Seconds	Minutes	Hours	Day Of Month	Month	Day Of Week	Year
+    # 	Every 3 hours
+    jobCheckFunds: 0 0 0/3 1/1 * ? *
+using:
+  spring:
+    schedulerFactory: true
