--- a/aaas-api-asset-allocation/src/main/resources/application-k8s.yml
+++ b/aaas-api-asset-allocation/src/main/resources/application-k8s.yml
@@ -16,7 +16,7 @@ spring:
     data:
       mongodb:
         database: ssf_asset_allo
-        host: 192.168.1.10
+        host: external-mongo-service
         port: 27017
         collection: portfolio_yield_all
 
