--- a/aaas-api-user-info/src/main/resources/application-local.yml
+++ b/aaas-api-user-info/src/main/resources/application-local.yml
@@ -107,3 +107,6 @@ cron:
     #Seconds	Minutes	Hours	Day Of Month	Month	Day Of Week	Year
     # 	At minute 30 past every hour.
     jobCheckPendingRecords: 0 */3 * ? * *
+    jobUpdateAndCaculateUPD: 0 0 11,23 ? * * *
+    jobPatchChkPendingRecordByZZInfo: 0 0 0 ? * * *
+    jobPatchChkPendingRecordNavadj: 0 0 0 ? * * *
