--- a/aaas-finance-trade/aaas-finance-trade-order/src/main/resources/application-local.yml
+++ b/aaas-finance-trade/aaas-finance-trade-order/src/main/resources/application-local.yml
@@ -77,3 +77,20 @@ grpc:
   zhongzhengapi_client:
     host: localhost
     port: 10171
+
+using:
+  spring:
+    schedulerFactory: true
+org:
+  quartz:
+    jobStore:
+        class: org.quartz.simpl.RAMJobStore
+        misfireThreshold: 60000
+    threadPool:
+        class: org.quartz.simpl.SimpleThreadPool
+        threadCount: 2
+        threadsInheritContextClassLoaderOfInitializingThread: true
+cron:
+  frequency:
+    #每天5 18 点开始
+    jobCheckOrderWithPay: 0 0 5,18 ? * * *
