--- a/aaas-api-gateway/pom.xml
+++ b/aaas-api-gateway/pom.xml
@@ -131,36 +131,15 @@
 			<plugin>
 				<groupId>io.fabric8</groupId>
 				<artifactId>fabric8-maven-plugin</artifactId>
-				<version>3.5.33</version>
+				<version>3.5.28</version>
 				<configuration>
-					<resources>
-						<labels>
-							<all>
-								<property>
-									<name>app</name>
-									<value>${artifactId}-${version}</value>
-								</property>
-								<property>
-									<name>hystrix.enabled</name>
-									<value>false</value>
-								</property>
-							</all>
-						</labels>
-					</resources>
-					<enricher>
-						<config>
-							<spring-boot-health-check>
-								<port>4444</port>
-							</spring-boot-health-check>
-						</config>
-					</enricher>
+					<composeFile>docker-compose.yml</composeFile>
 				</configuration>
 				<executions>
 					<execution>
-						<id>fmp</id>
-						<phase>deploy</phase>
 						<goals>
-							<goal>deploy</goal>
+							<goal>resource</goal>
+							<goal> build </goal>
 						</goals>
 					</execution>
 				</executions>
