--- a/aaas-api-user-info/pom.xml
+++ b/aaas-api-user-info/pom.xml
@@ -363,6 +363,7 @@
 				<executions>
 					<execution>
 						<goals>
+							<goal>resource</goal>
 							<goal> build </goal>
 						</goals>
 					</execution>
