--- a/aaas-app-tools/aaas-app-zhongzhenapi/src/main/resources/application-k8s.yml
+++ b/aaas-app-tools/aaas-app-zhongzhenapi/src/main/resources/application-k8s.yml
@@ -59,8 +59,9 @@ datasource:
       dialect: org.hibernate.dialect.MySQLDialect
   
 grpc:
+  port: 10171
   userinfo:
-#    host: localhost
+    host: aaas-api-user-info
     port: 10061
   data-manager-rpc:
     host: aaas-api-data-manager
@@ -82,3 +83,43 @@ api-asset-alloction-url: http://aaas-api-asset-allocation:10020
 
 # 每日收益计算 多线程
 daily-finance-calculate-thread: 8
+
+management:
+  endpoints:
+    web:
+      base-path: /
+
+oem-info:
+  oemInfos:
+   - oem_id: 1
+     oem_name: 贝贝鱼
+     bank_phone: 021-80270119
+     oem_version: V.1.0
+     prod_name: 贝贝鱼智投
+     home_page_img_one: http://47.96.164.161:81/1.png
+     home_page_img_two: http://47.96.164.161:81/2.png
+     home_page_img_three: http://47.96.164.161:81/3.png
+     home_page_img_four: http://47.96.164.161:81/4.png
+     combination_one: http://47.96.164.161:81/APP-invest-banner01.png
+     combination_two: http://47.96.164.161:81/APP-invest-banner02.png
+     combination_three: http://47.96.164.161:81/APP-invest-banner03.png
+     combination_four: http://47.96.164.161:81/APP-invest-banner04.png
+     combination_five: http://47.96.164.161:81/APP-invest-banner05.png
+     me_head_img: http://47.96.164.161:81/icon_me_headphoto2.png
+     about_logo: http://47.96.164.161:81/icon_about_logo2.png
+   - oem_id: 2
+     oem_name: 百合
+     bank_phone: 400-88-96799
+     oem_version: V.1.0
+     prod_name: 百合智投
+     home_page_img_one: http://47.96.164.161/1.png
+     home_page_img_two: http://47.96.164.161/2.png
+     home_page_img_three: http://47.96.164.161/3.png
+     home_page_img_four: http://47.96.164.161/4.png
+     combination_one: http://47.96.164.161/APP-invest-banner01.png
+     combination_two: http://47.96.164.161/APP-invest-banner02.png
+     combination_three: http://47.96.164.161/APP-invest-banner03.png
+     combination_four: http://47.96.164.161/APP-invest-banner04.png
+     combination_five: http://47.96.164.161/APP-invest-banner05.png
+     me_head_img: http://47.96.164.161/icon_me_headphoto.png
+     about_logo: http://47.96.164.161/icon_about_logo.png
