--- a/aaas-finance-trade/aaas-finance-trade-order/src/main/resources/application-local.yml
+++ b/aaas-finance-trade/aaas-finance-trade-order/src/main/resources/application-local.yml
@@ -78,9 +78,6 @@ grpc:
     host: localhost
     port: 10171
 
-using:
-  spring:
-    schedulerFactory: true
 org:
   quartz:
     jobStore:
@@ -90,7 +87,11 @@ org:
         class: org.quartz.simpl.SimpleThreadPool
         threadCount: 2
         threadsInheritContextClassLoaderOfInitializingThread: true
+using:
+  spring:
+    schedulerFactory: true
 cron:
   frequency:
     #每天5 18 点开始
-    jobCheckOrderWithPay: 0 0 5,18 ? * * *
+#    jobCheckOrderWithPay: 0 0 5,18 ? * * *
+    jobCheckOrderWithPay: 0 10,15 0 ? * * *
