--- a/aaas-api-user-info/src/main/resources/application-dev.yml
+++ b/aaas-api-user-info/src/main/resources/application-dev.yml
@@ -105,6 +105,15 @@ org:
         class: org.quartz.simpl.SimpleThreadPool
         threadCount: 2
         threadsInheritContextClassLoaderOfInitializingThread: true
+org:
+  quartz:
+    jobStore:
+        class: org.quartz.simpl.RAMJobStore
+        misfireThreshold: 60000
+    threadPool:
+        class: org.quartz.simpl.SimpleThreadPool
+        threadCount: 2
+        threadsInheritContextClassLoaderOfInitializingThread: true
 using:
   spring:
     schedulerFactory: true
@@ -112,4 +121,7 @@ cron:
   frequency:
     #Seconds	Minutes	Hours	Day Of Month	Month	Day Of Week	Year
     # 	At minute 30 past every hour.
-    jobCheckPendingRecords: 27 * * * *
+    jobCheckPendingRecords: 0 0 0 ? * * *
+    jobUpdateAndCaculateUPD: 0 0 11,23 ? * * *
+    jobPatchChkPendingRecordByZZInfo: 0 0 0 ? * * *
+    jobPatchChkPendingRecordNavadj: 0 0 0 ? * * *
