--- a/aaas-finance-trade/aaas-finance-trade-order/src/main/resources/application-dev.yml
+++ b/aaas-finance-trade/aaas-finance-trade-order/src/main/resources/application-dev.yml
@@ -77,9 +77,6 @@ grpc:
     host: localhost
     port: 10171
 
-using:
-  spring:
-    schedulerFactory: true
 org:
   quartz:
     jobStore:
@@ -89,10 +86,13 @@ org:
         class: org.quartz.simpl.SimpleThreadPool
         threadCount: 2
         threadsInheritContextClassLoaderOfInitializingThread: true
+using:
+  spring:
+    schedulerFactory: true
 cron:
   frequency:
-    #每天10：45分开始
-    jobwithcrontrigger: 0 45 10 ? * * *
+    #每天5 18 点开始
+    jobCheckOrderWithPay: 0 0 5,11,17,23 ? * * *
 
 management:
   endpoints:
