--- a/aaas-finance-trade/aaas-finance-trade-order/src/main/resources/application-dev.yml
+++ b/aaas-finance-trade/aaas-finance-trade-order/src/main/resources/application-dev.yml
@@ -76,6 +76,9 @@ grpc:
   zhongzhengapi_client:
     host: localhost
     port: 10171
+  datacollection_client:
+    host: localhost
+    port: 10091
 
 org:
   quartz:
