--- a/aaas-api-common/pom.xml
+++ b/aaas-api-common/pom.xml
@@ -109,6 +109,11 @@
                 </exclusion>
             </exclusions>
         </dependency>
+      <dependency>
+        <groupId>org.quartz-scheduler</groupId>
+        <artifactId>quartz</artifactId>
+        <scope>test</scope>
+      </dependency>
 
     </dependencies>
 </project>
