--- a/aaas-api-user-info/src/main/resources/application-k8s.yml
+++ b/aaas-api-user-info/src/main/resources/application-k8s.yml
@@ -99,5 +99,7 @@ cron:
   frequency:
     #Seconds	Minutes	Hours	Day Of Month	Month	Day Of Week	Year
     # 	At minute 30 past every hour.
-    jobCheckPendingRecords: 30 */1 * * *
-
+    jobCheckPendingRecords: 0 0 0/1 1/1 * ? *
+    jobUpdateAndCaculateUPD: 0 0 0/3 1/1 * ? *
+    jobPatchChkPendingRecordByZZInfo: 0 0 0/4 1/1 * ? *
+    jobPatchChkPendingRecordNavadj: 0 0 0/6 1/1 * ? *
