--- a/aaas-finance-trade/aaas-finance-trade-order/src/main/resources/application-dev.yml
+++ b/aaas-finance-trade/aaas-finance-trade-order/src/main/resources/application-dev.yml
@@ -93,7 +93,7 @@ using:
 cron:
   frequency:
     #每天5 18 点开始
-    jobCheckOrderWithPay: 0 10/1 1/1 ? * * *
+    jobCheckOrderWithPay: 0 0 0/3 1/1 * ? *
 
 management:
   endpoints:
