--- a/aaas-finance-trade/aaas-finance-trade-order/src/main/resources/application-prod.yml
+++ b/aaas-finance-trade/aaas-finance-trade-order/src/main/resources/application-prod.yml
@@ -97,4 +97,4 @@ using:
 cron:
   frequency:
     #每天5 18 点开始
-    jobCheckOrderWithPay: 0 10/1 1/1 ? * * *
+    jobCheckOrderWithPay: 0 0 0/3 1/1 * ? *
