--- a/aaas-finance-trade/aaas-finance-trade-order/src/main/resources/application-local.yml
+++ b/aaas-finance-trade/aaas-finance-trade-order/src/main/resources/application-local.yml
@@ -94,4 +94,4 @@ cron:
   frequency:
     #Every 5  minute(s) starting at minute
     jobCheckOrderWithPay: 0 0 0/3 1/1 * ? *
-#    jobCheckOrderWithPay: 0 10,15 0 ? * * *
+    jobPatchPendingRecords: 0 0 0/3 1/1 * ? *
