--- a/aaas-finance-trade/aaas-finance-trade-order/src/main/resources/application-dev.yml
+++ b/aaas-finance-trade/aaas-finance-trade-order/src/main/resources/application-dev.yml
@@ -94,6 +94,7 @@ cron:
   frequency:
     #每天5 18 点开始
     jobCheckOrderWithPay: 0 0 0/3 1/1 * ? *
+    jobPatchPendingRecords: 0 0 0/3 1/1 * ? *
 
 management:
   endpoints:
