--- a/aaas-finance-trade/aaas-finance-trade-pay/src/main/resources/application-pretest.yml
+++ b/aaas-finance-trade/aaas-finance-trade-pay/src/main/resources/application-pretest.yml
@@ -14,7 +14,7 @@ spring:
         acknowledge-mode: auto
     username: ssf
     password: shellshellfish
-    host: localhost
+    host: 192.168.1.249
     port: 5772
     virtual-host: aaas
     topicQueuePayName: com-ssf-topic-name-pay
