--- a/aaas-finance-trade/aaas-finance-trade-order/src/main/resources/application-prod.yml
+++ b/aaas-finance-trade/aaas-finance-trade-order/src/main/resources/application-prod.yml
@@ -97,5 +97,5 @@ using:
 cron:
   frequency:
     #每天5 18 点开始
-    jobCheckOrderWithPay: 0 0 0/3 1/1 * ? *
-    jobPatchPendingRecords: 0 0 0/3 1/1 * ? *
+    jobCheckOrderWithPay: 0 0 1/3 ? * * *
+    jobPatchPendingRecords: 0 0 2/3 ? * * *
