--- a/aaas-api-user-info/src/main/resources/application-local.yml
+++ b/aaas-api-user-info/src/main/resources/application-local.yml
@@ -107,6 +107,6 @@ cron:
     #Seconds	Minutes	Hours	Day Of Month	Month	Day Of Week	Year
     # 	 Every 15 minute between minute   and minute
     jobCheckPendingRecords: 0 0 0/3 1/1 * ? *
-    jobUpdateAndCaculateUPD: 0 0 0/3 1/1 * ? *
-    jobPatchChkPendingRecordByZZInfo: 0 0 0/3 1/1 * ? *
-    jobPatchChkPendingRecordNavadj: 0 0 0/3 1/1 * ? *
+    jobUpdateAndCaculateUPD: 0 0 2/3 ? * * *
+    jobPatchChkPendingRecordByZZInfo: 0 0 1/3 ? * * *
+    jobPatchChkPendingRecordNavadj: 0 0 2/3 ? * * *
