--- a/aaas-finance-trade/aaas-finance-trade-order/src/main/resources/application-local.yml
+++ b/aaas-finance-trade/aaas-finance-trade-order/src/main/resources/application-local.yml
@@ -93,5 +93,5 @@ using:
 cron:
   frequency:
     #Every 5  minute(s) starting at minute
-    jobCheckOrderWithPay: 0 0 0/3 1/1 * ? *
-    jobPatchPendingRecords: 0 0 0/3 1/1 * ? *
+    jobCheckOrderWithPay: 0 0 1/3 ? * * *
+    jobPatchPendingRecords: 0 0 2/3 ? * * *
